<resources>
    <string name="app_name">Android Tutorial</string>
    <string name="get_weather_data">get weather data</string>
    <string name="an_error_occurred">an error occurred</string>
    <string name="temperature">temperature</string>
    <string name="humidity">humidity</string>
    <string name="pressure">pressure</string>
    <string name="minimum_temperature">minimum temperature</string>
    <string name="maximum_temperature">maximum temperature</string>
    <string name="current_weather_data">current weather data</string>
    <string name="format_temperature" translatable="false">%1.0f\u00B0</string>
</resources>
